2003-02-25  Rodney Dawes  <dobey@free.fr>

	* *: create gnome-2-2 branch and commit following patch to HEAD
	* bonobo/bonobo-ui-sync-toolbar.c: Move _set_border_width () call
	* bonobo/bonobo-ui-toolbar.c: Add shadow_type style property, to match
	GtkToolbar drawing
	
2003-02-21  Roozbeh Pournader  <roozbeh@sharif.edu>

	* configure.in: Added "fa" to ALL_LINGUAS.

2003-02-14  Alex Duggan  <aldug@astrolinux.com>

	* configure.in: require gtk+ >= 2.2.0 for the
	multi-screen stuff.

2003-02-09  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "kn" to ALL_LINGUAS.

2003-02-06  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "id" to ALL_LINGUAS.

2003-02-03  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* configure.in: Write makefile doc/api/figures/Makefile.

	* doc/api/tmpl/bonobo-control-frame.sgml: Include the figure
	control-frame.png.

	* doc/api/tmpl/bonobo-control.sgml: Include control.png figure.

	* doc/api/figures/control-frame.dia, doc/api/figures/control.dia:
	New uml class diagrams showing the Bonobo::Control and
	Bonobo::ControlFrame interfaces.
	
	* doc/api/figures/Makefile.am: New makefile to convert .dia to
	.png.

	* doc/api/Makefile.am (HTML_IMAGES): Include the two new figures.

2003-01-29  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* bonobo/bonobo-zoomable.h: Removed declaration of the
	non-implememented function bonobo_zoomable_corba_object_create().

2003-01-27  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* doc/api/Makefile.am (content_files): Added ui-faq.xml.

	* doc/api/libbonoboui-docs.sgml: Include the new FAQ in the docs.

	* doc/api/ui-faq.xml: ditto

	* doc/ui-faq.txt: Converted all of this to docbook and moved to
	api/ui-faq.xml

2003-01-22  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* doc/api/libbonoboui-sections.txt: Removed canvas sections.

	* doc/api/Makefile.am (IGNORE_HFILES): Don't ignore